--- a/map1.html
+++ b/map1.html
@@ -29,6 +29,8 @@ window.onload = function() {
 			filter(contains(str(?name),'駐車場'))
 		} limit 100
 	`
+	map.addIcon(lat, lng, name, "icon-carparking.png", 64, 64)
+	
 	querySPARQL(query, function(data) {
 		var items = data.results.bindings;
 		for (var i = 0; i < items.length; i++) {
